compiler/testData/multiplatform/inlineClasses/output.txt
-- Common --
Exit code: OK
Output:
compiler/testData/multiplatform/inlineClasses/common.kt:1:16: warning: suppression of error 'UNSUPPORTED_FEATURE' might compile and work, but the compiler behavior is UNSPECIFIED and WILL NOT BE PRESERVED. Please report your use case to the Kotlin issue tracker instead: https://kotl.in/issue
@file:Suppress("UNSUPPORTED_FEATURE")
               ^^^^^^^^^^^^^^^^^^^^^
compiler/testData/multiplatform/inlineClasses/common.kt:3:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect inline class Foo1(val x: Int)
^^^^^^
compiler/testData/multiplatform/inlineClasses/common.kt:3:8: warning: 'inline' modifier is deprecated. Use 'value' instead.
expect inline class Foo1(val x: Int)
       ^^^^^^
compiler/testData/multiplatform/inlineClasses/common.kt:4:1: warning: 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. Consider using the '-Xexpect-actual-classes' flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
expect inline class Foo2(val y: String)
^^^^^^
compiler/testData/multiplatform/inlineClasses/common.kt:4:8: warning: 'inline' modifier is deprecated. Use 'value' instead.
expect inline class Foo2(val y: String)
       ^^^^^^

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/inlineClasses/jvm.kt:5:14: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect inline class Foo2 : Any
  actual: public final actual class Foo2 : Any
  reason: the modifiers are different (companion, inner, inline, value)
actual class Foo2 actual constructor(actual val y: String)
             ^^^^

-- JS --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/inlineClasses/js.kt:5:14: error: the 'expect' and the 'actual' declarations are incompatible.
  expect: public final expect inline class Foo2 : Any
  actual: public final actual class Foo2 : Any
  reason: the modifiers are different (companion, inner, inline, value)
actual class Foo2 actual constructor(actual val y: String)
             ^^^^
